fixed project-info alignment

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ h5 {
 
 h6 {
 	font-size: 1em;
+	margin: 0;
 }
 
 a {
@@ -52,6 +53,10 @@ section {
 table {
 	width: 75%;
 	margin: 1% auto;
+}
+
+td {
+	position: relative;
 }
 
 nav {
@@ -128,13 +133,15 @@ nav .logo {
 	padding: 1% 0;
 }
 
+
 #web-portfolio .project-info p {
-	margin: 4% 10%;
+	padding: 1% 6%;
 	font-size: 1em;
 }
 
 #sound-portfolio .project-info p {
-	margin: 2% 5% 1% 5%;
+	padding: 1% 5%;
+	font-size: .9em;
 }
 
 #intro .background {
@@ -152,18 +159,22 @@ nav .logo {
 	background-color: #FFFFFA;
 }
 
-#web-portfolio .project-info {
-	width: 33.9%;
-	margin: 1.2% 0 0 3%;
+#web-portfolio .picture {
+	padding: .2%;
+	background-color: rgba(44, 45, 51, .8);
+	box-shadow: 1px 1px 4px #2C2D33;
+	border-radius: 1%;
+}
+
+#sound-portfolio .picture {
+	padding: .2%;
+	background-color: rgba(255, 255, 250, .3);
+	box-shadow: 1px 1px 4px #FFFFFA;
+	border-radius: 3%;
 }
 
 #sound-portfolio .background {
 	background-color: #2C2D33;
-}
-
-#sound-portfolio .project-info {
-	width: 22.5%;
-	margin: .8% 0 0 2%;
 }
 
 #contact .background {
@@ -189,16 +200,12 @@ nav .logo {
 }
 
 .project-info h5 {
-	margin: 1.5% 0 0 2%;
+	padding: 1% 2%;
 	text-align: left;
 }
 
 .project-info h6 {
-	margin: 6% 0 0 1%;
-}
-
-.project-info p {
-	font-size: .9em;
+	padding: 3% 0 1% 0;
 }
 
 .background {
@@ -224,20 +231,6 @@ nav .logo {
 	margin: 3% 0;
 }
 
-#web-portfolio .picture {
-	padding: .2%;
-	background-color: rgba(44, 45, 51, .8);
-	box-shadow: 1px 1px 4px #2C2D33;
-	border-radius: 1%;
-}
-
-#sound-portfolio .picture {
-	padding: .2%;
-	background-color: rgba(255, 255, 250, .3);
-	box-shadow: 1px 1px 4px #FFFFFA;
-	border-radius: 3%;
-}
-
 .content-container {
 	display: table;
 	table-layout: fixed;
@@ -256,9 +249,10 @@ nav .logo {
 
 .project-info {
 	position: absolute;
+	margin: 3% 5%;
+	padding-bottom: 1%;
 	text-shadow: 2px 2px 4px #000;
 	color: white;
-	padding-bottom: 1%;
 }
 
 .hidden {
